--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,19 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
   <modelVersion>4.0.0</modelVersion>
+  <packaging>jar</packaging>
   <groupId>net.sourceforge.parallelcolt</groupId>
   <artifactId>parallelcolt</artifactId>
   <version>0.10.2-SNAPSHOT</version>
   <name>ParallelColt</name>
   <description>Parallel Colt is a multithreaded version of Colt - a library for high performance scientific computing in Java. It contains efficient algorithms for data analysis, linear algebra, multi-dimensional arrays, Fourier transforms, statistics and histogramming.</description>
   <url>http://sourceforge.net/projects/parallelcolt/</url>
+
+  <prerequisites>
+    <maven>3.0.0</maven>
+  </prerequisites>
 
   <licenses>
     <license>
@@ -25,10 +33,13 @@
   <scm>
     <!-- <url>https://parallelcolt.svn.sourceforge.net/svnroot/parallelcolt</url>
     <connection>scm:svn:https://parallelcolt.svn.sourceforge.net/svnroot/parallelcolt</connection>
-    <developerConnection>scm:svn:https://parallelcolt.svn.sourceforge.net/svnroot/parallelcolt</developerConnection> -->
+    <developerConnection>scm:svn:https://parallelcolt.svn.sourceforge.net/svnroot/parallelcolt</developerConnection>
     <url>git@github.com:rwl/ParallelColt.git</url>
     <connection>scm:git:git@github.com:rwl/ParallelColt.git</connection>
-    <developerConnection>scm:git:git@github.com:rwl/ParallelColt.git</developerConnection>
+    <developerConnection>scm:git:git@github.com:rwl/ParallelColt.git</developerConnection> -->
+    <url>git@github.com:CBrophy/ParallelColt.git</url>
+    <connection>scm:git:git@github.com:CBrophy/ParallelColt.git</connection>
+    <developerConnection>scm:git:git@github.com:CBrophy/ParallelColt.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
 
@@ -47,6 +58,11 @@
       <id>rwl</id>
       <name>Richard Lincoln</name>
       <email>r.w.lincoln@gmail.com</email>
+    </developer>
+    <developer>
+      <id>cbrophy</id>
+      <name>Charles Brophy</name>
+      <email>charlesb771@gmail.com</email>
     </developer>
   </developers>
 
@@ -118,16 +134,17 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.2</version>
         <configuration>
-          <source>1.5</source>
-          <target>1.5</target>
+          <source>1.7</source>
+          <target>1.7</target>
         </configuration>
       </plugin>
       
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.12</version>
+        <version>2.18</version>
         <configuration>
           <excludes>
             <exclude>cern/colt/matrix/tdouble/algo/solver/DoubleCGAMGTest.java</exclude>
@@ -166,7 +183,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
-        <version>2.3</version>
+        <version>2.5.1</version>
         <configuration>
           <!-- need this for gpg plugin to work correctly -->
           <mavenExecutorId>forked-path</mavenExecutorId>
@@ -176,7 +193,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.8.1</version>
+        <version>2.10.1</version>
         <configuration>
           <doctitle>&lt;h2&gt;&lt;a target=_top href=${project.url} &gt;Parallel Colt&lt;/a&gt; &lt;/h2&gt;&lt;h4&gt;Open Source Libraries for High Performance Scientific and Technical Computing in Java&lt;/h4&gt;&lt;hr&gt;</doctitle>
           <show>public</show>
@@ -189,6 +206,25 @@
           <bottom>&lt;font size=-1 &gt;Jump to the &lt;a target=_top href=${project.url} &gt;Parallel Colt Homepage&lt;/a&gt;</bottom>
         </configuration>
       </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>2.9</version>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-clean-plugin</artifactId>
+        <version>2.6.1</version>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.5</version>
+      </plugin>
+
     </plugins>
   </build>
 
@@ -206,7 +242,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
-            <version>1.4</version>
+            <version>1.5</version>
             <executions>
               <execution>
                 <id>sign-artifacts</id>
