--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,12 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>18.0</version>
+    </dependency>
+
+    <dependency>
       <groupId>net.sourceforge.jplasma</groupId>
       <artifactId>jplasma</artifactId>
       <version>1.2.0</version>
@@ -242,7 +248,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
-            <version>1.5</version>
+            <version>1.6</version>
             <executions>
               <execution>
                 <id>sign-artifacts</id>
